# dataforge-streaming

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
docs/architecture/decision-records/: 001-why-kappa-over-lambda.md
src/dataforge_streaming/: __init__.py
src/dataforge_streaming/consumers/: spark_consumer.py
src/dataforge_streaming/producers/: event_producer.py
src/dataforge_streaming/windowing/: __init__.py  processor.py
