[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataforge-streaming"
version = "0.1.0"
description = "Real-time data processing framework with Kafka, windowing, and late data handling."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Vipul Singhal", email = "vipulmpctec@gmail.com"}]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5.0"]
kafka = ["confluent-kafka>=2.3"]
all = ["dataforge-streaming[spark,kafka]"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "mypy>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge_streaming"]
